@@ -1,0 +1,6 @@
+var a = null;
+println(a is null);
+var b = true;
+if (b) {
+    println(!b);
+}
